--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ url: https://scotte.github.io/jekyll-clean
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: /jekyll-clean
+baseurl: /fusionx3.github.io
 
 # This can be '' to hide the Github nav button
-github: 'scotte/jekyll-clean'
+github: 'fusionx3/fusionx3.github.io'
 
 # Set this to your UA-# value, or '' to disable the block completely
 gaaccount: ''
