--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ name: TCPJunkie
 description: A Pentester's Blog, where you will find numerous topics concerning information security and hacking.
 
 # url is currently only used only for the RSS feed in feed.xml
-url: https://fusionx3.github.io
+url: http://tcpjunkie.com
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
