--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: http://tcpjunkie.com
 baseurl: /
 
 # This can be '' to hide the Github nav button
-github: 'fusionx3/fusionx3.github.io'
+github: 'fusionx3/'
 
 # Set this to your UA-# value, or '' to disable the block completely
 gaaccount: ''
